@@ -5,6 +5,9 @@ Version 0.6.11
 
 - Bug fixes:
 
+  * Load package tags from APT if debtags database is not available.
+    (Closes: #501732)
+
 - Internal changes:
 
   * Access apt-xapian-index directly.  Index path can be configured by
